kubernetes/system/monitoring/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-main
  namespace: monitoring
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`monitoring.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer, namespace: apps}, {name: authelia, namespace: apps}]
    services: [{name: kube-prometheus-stack-grafana, port: 80}]
  tls: {secretName: wildcard-woitzik-dev-tls}
